[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_left = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MenuMargin"]
margin_left = 32.0
margin_right = 568.0
margin_bottom = 1200.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MenuMargin/Buttons"]
margin_top = 515.0
margin_right = 536.0
margin_bottom = 548.0
text = "Start"

[node name="QuitButton" type="Button" parent="MenuMargin/Buttons"]
margin_top = 568.0
margin_right = 536.0
margin_bottom = 601.0
text = "Quit"

[node name="FooterButtonsMargin" type="MarginContainer" parent="MenuMargin/Buttons"]
margin_top = 621.0
margin_right = 536.0
margin_bottom = 684.0
custom_constants/margin_top = 30

[node name="FooterButtons" type="HBoxContainer" parent="MenuMargin/Buttons/FooterButtonsMargin"]
margin_top = 30.0
margin_right = 536.0
margin_bottom = 63.0
alignment = 1

[node name="SoundButton" type="Button" parent="MenuMargin/Buttons/FooterButtonsMargin/FooterButtons"]
margin_left = 234.0
margin_right = 302.0
margin_bottom = 33.0
text = "Mute"
[connection signal="pressed" from="MenuMargin/Buttons/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuMargin/Buttons/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MenuMargin/Buttons/FooterButtonsMargin/FooterButtons/SoundButton" to="." method="_on_sound_pressed"]
